Spike Topic Buttons

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ title: Metro Mayor's Task Force on Housing
   <h2>Mayoral Committment</h2>
 </div>
 
-<div class="housing-best-practices">
+<!-- <div class="housing-best-practices">
   <h2>Housing Best Practices</h2>
 
   <div class="topics">
@@ -112,4 +112,4 @@ title: Metro Mayor's Task Force on Housing
     <h3>This is a best practice</h3>
   </div>
 
-</div>
+</div> -->
