Reformat Topics and Subtopics

--- a/index.html
+++ b/index.html
@@ -52,11 +52,33 @@ title: Metro Mayor's Task Force on Housing
 
 <div class="compact">
   <h2>The Compact</h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p>Metro Boston is experiencing a housing crisis. The rate of housing production in Massachusetts is one of the lowest in the country, even as we’ve seen increases in population and employment. Since 2010, the Commonwealth has added nearly 250,000 residents and 350,000 new jobs, while permitting only 81,000 new housing units (U.S. Census Bureau and U.S. Bureau of Labor Statistics). High demand and inadequate housing production contribute to rapidly rising home prices throughout eastern Massachusetts, so that housing here has become among the highest cost in the nation. Limited supply makes it difficult for Metro Boston residents to find housing that works for them, and for employers to retain and recruit workers. </p>
 
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p>To accommodate a growing economy, Metro Boston will need to build about 330,000 additional units between 2010 and 2030 (MAPC Population and Housing Demand Projections). Furthermore, changing preferences and rapid job growth in and around Boston mean that an increasing share of this demand will be in the region’s Inner Core, putting pressure on the existing housing stock. Without additional units to meet that demand, rents and sale prices will continue to rise, and lower-income households will be pushed out of their communities.</p>
 
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p>However, this crisis is not just about sheer numbers; it’s about people. We need housing that works for a range of household types and incomes, including families with lower incomes: renters, students, young homebuyers, empty nesters, seniors looking to downsize, families with children, vulnerable residents, and people with disabilities. The Metro Mayors Coalition (MMC) believes current residents must have housing options they can afford in the communities where they want to live, and that newcomers looking to live and work in the region should be able to make a home here. Towards that end, we pledge to work together to increase housing opportunity in Metro Boston in accordance with these principles:</p>
+
+  <ol>
+    <li><b>Stakeholder and Municipal Engagement.</b> We must engage in broad, inclusive outreach to municipal officials, residents, and other stakeholders within and beyond the MMC to understand and address regional housing concerns.</li>
+
+    <li><b>Housing Production.</b> We strive to increase the production of housing throughout Metro Boston so that we can provide homes for all types of households and income levels. This should include both rental and homeownership opportunities, consistent with regional need, and designed in ways that respect the neighborhoods in which they are located.</li>
+
+    <li><b>Housing Preservation.</b> We support the preservation of existing affordable housing choices. This includes protecting affordable apartments at risk of expiring subsidies or deed restrictions; preserving “naturally occurring” affordable housing; repairing older homes in need of maintenance and minimizing tear-downs; and preserving smaller homes.</li>
+
+    <li><b>Housing Affordability.</b> We welcome and will invest in the development of housing that is affordable to low-, moderate-, and middle-income households.</li>
+
+    <li><b>Housing Diversity.</b> We promote the development and preservation of diverse types of rental and homeownership housing at a range of scales and a unit mix inclusive of multiple bedrooms. </li>
+
+    <li><b>Housing Location.</b> We encourage residential and mixed-use development in transit-accessible and/or walkable areas where people can get around locally and make connections throughout the region without relying on private auto. We also support creation of more such neighborhoods through expansion of public transit and retrofits of select former industrial sites.</li>
+
+    <li><b>Complete Neighborhoods.</b> Our commitment to greater housing opportunity is part of a holistic approach to community building that includes a mix of land uses and access to open space. Our residents want to live in areas that offer a range of activity throughout the day and evening.</li>
+
+    <li><b>Housing Design.</b> We support universal design in housing to create accessible and barrier-free homes through the incorporation of features that are commonly available and easily usable by people of virtually all ages and abilities.</li>
+
+    <li><b>Housing Stability.</b> We will work to address extreme cost burdens, minimize the risk of displacement, reduce evictions, eliminate unfair rental practices, create permanent housing for homeless residents, and ensure safe and stable housing throughout Metro Boston.</li>
+
+    <li><b>Fair Housing.</b> We are committed to abolishing discrimination against tenants and buyers, and advancing fair and equitable access to housing opportunity for everyone.</li>
+  </ol>
 
   <div class="box" id="housing">
     <h3>Housing Our Region</h3>
@@ -82,34 +104,3 @@ title: Metro Mayor's Task Force on Housing
 <div class="mayoral-committment">
   <h2>Mayoral Committment</h2>
 </div>
-
-<!-- <div class="housing-best-practices">
-  <h2>Housing Best Practices</h2>
-
-  <div class="topics">
-    <ul>
-      <li>Topic 1</li>
-      <li>Topic 2</li>
-      <li>Topic 3</li>
-      <li>Topic 4</li>
-      <li>Topic 5</li>
-      <li>Topic 6</li>
-      <li>Topic 7</li>
-      <li>Topic 8</li>
-    </ul>
-  </div>
-
-  <div class="subtopic">
-    <ul>
-      <li>Subtopic 1</li>
-      <li>Subtopic 2</li>
-      <li>Subtopic 3</li>
-      <li>Subtopic 4</li>
-    </ul>
-  </div>
-
-  <div class="best-practice">
-    <h3>This is a best practice</h3>
-  </div>
-
-</div> -->
