Resolve #1 Add Signatures

--- a/index.html
+++ b/index.html
@@ -80,6 +80,21 @@ title: Metro Mayor's Task Force on Housing
     <li><b>Fair Housing.</b> We are committed to abolishing discrimination against tenants and buyers, and advancing fair and equitable access to housing opportunity for everyone.</li>
   </ol>
 
+  <img class="signature" src="images/brian-arrigo-signature.png">
+  <img class="signature" src="images/carlo-demaria-signature.png">
+  <img class="signature" src="images/gary-christenson-signature.png">
+  <img class="signature" src="images/james-mckenna-signature.png">
+  <img class="signature" src="images/joseph-curtatone-signature.png">
+  <img class="signature" src="images/joseph-sullivan-signature.png">
+  <img class="signature" src="images/louis-depasquale-signature.png">
+  <img class="signature" src="images/marty-walsh-signature.png">
+  <img class="signature" src="images/melvin-kleckner-signature.png">
+  <img class="signature" src="images/robert-dolan-signature.png">
+  <img class="signature" src="images/setti-warren-signature.png">
+  <img class="signature" src="images/stephanie-burke-signature.png">
+  <img class="signature" src="images/thomas-ambrosino-signature.png">
+  <img class="signature" src="images/thomas-koch-signature.png">
+
   <div class="box" id="housing">
     <h3>Housing Our Region</h3>
     <a href="">Explore the Issue ></a>
