--- a/index.html
+++ b/index.html
@@ -2,33 +2,6 @@
 layout: default
 title: Metro Mayor's Task Force on Housing
 ---
-<script>
-  document.addEventListener("DOMContentLoaded", function(event) {
-      var elements = document.getElementsByClassName('slide');
-      for (var i = 1; i < elements.length; i++) {
-        elements[i].className = elements[i].className + " hidden"
-      };
-    });
-  function previousSlide(event) {
-    event.target.parentNode.className = event.target.parentNode.className + " hidden"
-    event.target.parentNode.previousElementSibling.className = "slide"
-  };
-  function nextSlide(event) {
-    event.target.parentNode.className = event.target.parentNode.className + " hidden"
-    event.target.parentNode.nextElementSibling.className = "slide"
-  };
-  function fullScreen(event) {
-    event.target.parentNode.parentNode.className = event.target.parentNode.parentNode.className + " full-screen"
-    event.target.setAttribute('onclick','exitFullScreen(event)');
-    event.target.innerHTML = 'Exit Full Screen';
-  }
-  function exitFullScreen(event) {
-    event.target.parentNode.parentNode.className = 'slide-show'
-    event.target.setAttribute('onclick','fullScreen(event)');
-    event.target.innerHTML = 'Full Screen';
-  }
-</script>
-
 <h1>Metro Mayor’s Task Force on Housing</h1>
 
 <div class="task-force">
@@ -97,25 +70,11 @@ title: Metro Mayor's Task Force on Housing
 
   <div class="box" id="housing">
     <h3>Housing Our Region</h3>
-    <a href="">Explore the Issue ></a>
+    <a href="slide-show.html">Explore the Issue ></a>
   </div>
 
   <div class="box" id="best-practices">
     <h3>Best Practices</h3>
-    <a href="">Explore Tools ></a>
+    <a href="best-practices.html">Explore Tools ></a>
   </div>
-</div>
-
-<div class="slide-show">
-  <div class="slide" id="slide-number-1">
-    <button class="next" onclick="nextSlide(event)">></button>
-    <button class="full" onclick="fullScreen(event)">Full Screen</button>
-  </div>
-  <div class="slide" id="slide-number-2">
-    <button class="previous" onclick="previousSlide(event)"><</button>
-  </div>
-</div>
-
-<div class="mayoral-committment">
-  <h2>Mayoral Committment</h2>
 </div>
