Spike Migrate to Relative URLs + Municipality Pages
This commit migrates to using relative URLs for templates and is a test of whether this format works on GitHub Pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Metro Mayor's Task Force on Housing
     Meet the Task Force
   </div>
   <div class="task-force-members">
-    <img class="task-force-member" id="first-task-force-member" src="images/reardon.jpg">
+    <a href="municipalities/boston.html"><img class="task-force-member" id="first-task-force-member" src="images/reardon.jpg"></a>
     <img class="task-force-member" src="images/reardon.jpg">
     <img class="task-force-member" src="images/reardon.jpg">
     <img class="task-force-member" src="images/reardon.jpg">
