Resolve #5 Update Signatures
This resolves #5 by taking Ian’s updated image SVG files and putting them in place of the old signature files.

--- a/index.html
+++ b/index.html
@@ -53,20 +53,20 @@ title: Metro Mayor's Task Force on Housing
     <li><b>Fair Housing.</b> We are committed to abolishing discrimination against tenants and buyers, and advancing fair and equitable access to housing opportunity for everyone.</li>
   </ol>
 
-  <img class="signature" src="images/brian-arrigo-signature.png">
-  <img class="signature" src="images/carlo-demaria-signature.png">
-  <img class="signature" src="images/gary-christenson-signature.png">
-  <img class="signature" src="images/james-mckenna-signature.png">
-  <img class="signature" src="images/joseph-curtatone-signature.png">
-  <img class="signature" src="images/joseph-sullivan-signature.png">
-  <img class="signature" src="images/louis-depasquale-signature.png">
-  <img class="signature" src="images/marty-walsh-signature.png">
-  <img class="signature" src="images/melvin-kleckner-signature.png">
-  <img class="signature" src="images/robert-dolan-signature.png">
-  <img class="signature" src="images/setti-warren-signature.png">
-  <img class="signature" src="images/stephanie-burke-signature.png">
-  <img class="signature" src="images/thomas-ambrosino-signature.png">
-  <img class="signature" src="images/thomas-koch-signature.png">
+  <img class="signature" src="images/ambrosino-chelsea-01.svg">
+  <img class="signature" src="images/arrigo-revere-01.svg">
+  <img class="signature" src="images/burke-medford-01.svg">
+  <img class="signature" src="images/christenson-malden-01.svg">
+  <img class="signature" src="images/curatone-somerville-01.svg">
+  <img class="signature" src="images/demaria-everett-01.svg">
+  <img class="signature" src="images/depasquale-cambridge-01.svg">
+  <img class="signature" src="images/dolan-melrose-01.svg">
+  <img class="signature" src="images/kleckner-brookline-01.svg">
+  <img class="signature" src="images/koch-quincy-01.svg">
+  <img class="signature" src="images/mckenna-winthrop-01.svg">
+  <img class="signature" src="images/sullivan-braintree-01.svg">
+  <img class="signature" src="images/walsh-boston-01.svg">
+  <img class="signature" src="images/warren-newton-01.svg">
 
   <div class="box" id="housing">
     <h3>Housing Our Region</h3>
