--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@ title: Metro Mayor's Task Force on Housing
     <img class="task-force-member" src="images/reardon.jpg">
     <img class="task-force-member" src="images/reardon.jpg">
     <img class="task-force-member" src="images/reardon.jpg">
+    <img class="task-force-member" src="images/reardon.jpg">
+    <img class="task-force-member" src="images/reardon.jpg">
+    <img class="task-force-member" src="images/reardon.jpg">
+    <img class="task-force-member" src="images/reardon.jpg">
   </div>
 </div>
 
