Resolve #4 Link Mayor Pictures to Community Pages
This creates a basic template for each community page and links the pictures of the mayors to their community pages.

--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@ title: Metro Mayor's Task Force on Housing
   </div>
   <div class="task-force-members">
     <a href="municipalities/boston.html"><img class="task-force-member" id="first-task-force-member" src="images/reardon.jpg"></a>
-    <img class="task-force-member" src="images/reardon.jpg">
-    <img class="task-force-member" src="images/reardon.jpg">
-    <img class="task-force-member" src="images/reardon.jpg">
-    <img class="task-force-member" src="images/reardon.jpg">
-    <img class="task-force-member" src="images/reardon.jpg">
-    <img class="task-force-member" src="images/reardon.jpg">
-    <img class="task-force-member" src="images/reardon.jpg">
-    <img class="task-force-member" src="images/reardon.jpg">
-    <img class="task-force-member" src="images/reardon.jpg">
-    <img class="task-force-member" src="images/reardon.jpg">
-    <img class="task-force-member" src="images/reardon.jpg">
-    <img class="task-force-member" src="images/reardon.jpg">
-    <img class="task-force-member" src="images/reardon.jpg">
-    <img class="task-force-member" src="images/reardon.jpg">
+    <a href="municipalities/arlington.html"><img class="task-force-member" src="images/reardon.jpg"></a>
+    <a href="municipalities/braintree.html"><img class="task-force-member" src="images/reardon.jpg"></a>
+    <a href="municipalities/brookline.html"><img class="task-force-member" src="images/reardon.jpg"></a>
+    <a href="municipalities/cambridge.html"><img class="task-force-member" src="images/reardon.jpg"></a>
+    <a href="municipalities/chelsea.html"><img class="task-force-member" src="images/reardon.jpg"></a>
+    <a href="municipalities/everett.html"><img class="task-force-member" src="images/reardon.jpg"></a>
+    <a href="municipalities/malden.html"><img class="task-force-member" src="images/reardon.jpg"></a>
+    <a href="municipalities/medford.html"><img class="task-force-member" src="images/reardon.jpg"></a>
+    <a href="municipalities/melrose.html"><img class="task-force-member" src="images/reardon.jpg"></a>
+    <a href="municipalities/newton.html"><img class="task-force-member" src="images/reardon.jpg"></a>
+    <a href="municipalities/quincy.html"><img class="task-force-member" src="images/reardon.jpg"></a>
+    <a href="municipalities/revere.html"><img class="task-force-member" src="images/reardon.jpg"></a>
+    <a href="municipalities/somerville.html"><img class="task-force-member" src="images/reardon.jpg"></a>
+    <a href="municipalities/winthrop.html"><img class="task-force-member" src="images/reardon.jpg"></a>
   </div>
 </div>
 
