--- a/municipalities/arlington.html
+++ b/municipalities/arlington.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Boston
+title: Arlington
 ---
-<h1>Boston</h1>
+<h1>Arlington</h1>
 <div class="container">
   <figure>
     <img class="mayor" src="{{ "/images/reardon.jpg" | relative_url }}">
