--- a/municipalities/braintree.html
+++ b/municipalities/braintree.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Boston
+title: Braintree
 ---
-<h1>Boston</h1>
+<h1>Braintree</h1>
 <div class="container">
   <figure>
     <img class="mayor" src="{{ "/images/reardon.jpg" | relative_url }}">
