--- a/municipalities/brookline.html
+++ b/municipalities/brookline.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Boston
+title: Brookline
 ---
-<h1>Boston</h1>
+<h1>Brookline</h1>
 <div class="container">
   <figure>
     <img class="mayor" src="{{ "/images/reardon.jpg" | relative_url }}">
