Resolve #7 Add About Page + Link
* Add about page and link to the upper right of the website.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 layout: default
 title: Metro Mayor's Task Force on Housing
 ---
+<ul class="navigation">
+  <li><a href="about.html">About</a></li>
+</ul>
 <h1>Metro Mayor’s Task Force on Housing</h1>
 
 <div class="task-force">
