Resolve #14 Embed Roboto
* Change font embed to Roboto
* Refactor CSS to move media queries to bottom of CSS for easier reading
* Change widths to ems for more accurate rendering
* Add initial bottom borders to Compact and Meet the Mayor Headings

--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@ title: Metro Mayor's Task Force on Housing
 <h1>Metro Mayor’s Task Force on Housing</h1>
 
 <div class="task-force">
-  <div class="task-force-text">
-    Meet the Task Force
-  </div>
   <div class="task-force-members">
     <a href="municipalities/boston.html"><img class="task-force-member" id="first-task-force-member" src="images/reardon.jpg"></a>
     <a href="municipalities/arlington.html"><img class="task-force-member" src="images/reardon.jpg"></a>
@@ -28,10 +25,18 @@ title: Metro Mayor's Task Force on Housing
     <a href="municipalities/somerville.html"><img class="task-force-member" src="images/reardon.jpg"></a>
     <a href="municipalities/winthrop.html"><img class="task-force-member" src="images/reardon.jpg"></a>
   </div>
+  <div class="task-force-text">
+    Meet the Mayors
+    <div id="right-bottom-border"></div>
+  </div>
 </div>
 
 <div class="compact">
-  <h2>The Compact</h2>
+  <h2>
+    The Compact
+    <div id="left-bottom-border"></div>
+  </h2>
+
   <p>Metro Boston is experiencing a housing crisis. The rate of housing production in Massachusetts is one of the lowest in the country, even as we’ve seen increases in population and employment. Since 2010, the Commonwealth has added nearly 250,000 residents and 350,000 new jobs, while permitting only 81,000 new housing units (U.S. Census Bureau and U.S. Bureau of Labor Statistics). High demand and inadequate housing production contribute to rapidly rising home prices throughout eastern Massachusetts, so that housing here has become among the highest cost in the nation. Limited supply makes it difficult for Metro Boston residents to find housing that works for them, and for employers to retain and recruit workers. </p>
 
   <p>To accommodate a growing economy, Metro Boston will need to build about 330,000 additional units between 2010 and 2030 (MAPC Population and Housing Demand Projections). Furthermore, changing preferences and rapid job growth in and around Boston mean that an increasing share of this demand will be in the region’s Inner Core, putting pressure on the existing housing stock. Without additional units to meet that demand, rents and sale prices will continue to rise, and lower-income households will be pushed out of their communities.</p>
