Spike Link Bubble
* In desktop mode add a “bubble” with the appropraite link
* In mobile mode there is no “bubble and we simply get the housing icon at the bottom.

--- a/index.html
+++ b/index.html
@@ -80,12 +80,13 @@ title: Metro Mayor's Task Force on Housing
   <img class="signature" src="images/walsh-boston-01.svg">
   <img class="signature" src="images/warren-newton-01.svg">
 
-  <div class="box" id="housing">
+  <div id="housing">
     <h3>Housing Our Region</h3>
     <a href="slide-show.html">Explore the Issue ></a>
   </div>
 
-  <div class="box" id="best-practices">
+  <div id="best-practices">
+    <img src="images/best-practices-house.svg">
     <h3>Best Practices</h3>
     <a href="best-practices.html">Explore Tools ></a>
   </div>
