--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ title: Metro Mayor's Task Force on Housing
   <img class="signature" src="images/warren-newton-01.svg">
 
   <div id="housing">
+    <img src="images/housing-house.svg">
     <h3>Housing Our Region</h3>
     <a href="slide-show.html">Explore the Issue ></a>
   </div>
