--- a/index.html
+++ b/index.html
@@ -80,15 +80,19 @@ title: Metro Mayor's Task Force on Housing
   <img class="signature" src="images/walsh-boston-01.svg">
   <img class="signature" src="images/warren-newton-01.svg">
 
-  <div id="housing">
-    <img src="images/housing-house.svg">
-    <h3>Housing Our Region</h3>
-    <a href="slide-show.html">Explore the Issue ></a>
-  </div>
+  <a href="slide-show.html">
+    <div id="housing">
+      <img src="images/housing-house.svg">
+      <h3>Housing Our Region</h3>
+      <span>Explore the Issue ></span>
+    </div>
+  </a>
 
-  <div id="best-practices">
-    <img src="images/best-practices-house.svg">
-    <h3>Best Practices</h3>
-    <a href="best-practices.html">Explore Tools ></a>
-  </div>
+  <a href="best-practices.html">
+    <div id="best-practices">
+      <img src="images/best-practices-house.svg">
+      <h3>Best Practices</h3>
+      <span>Explore Tools ></span>
+    </div>
+  </a>
 </div>
