--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@ title: Metro Mayor's Task Force on Housing
 
 <div class="task-force">
   <div class="task-force-members">
-    <a href="municipalities/boston.html"><img class="task-force-member" id="first-task-force-member" src="images/reardon.jpg"></a>
-    <a href="municipalities/arlington.html"><img class="task-force-member" src="images/reardon.jpg"></a>
-    <a href="municipalities/braintree.html"><img class="task-force-member" src="images/reardon.jpg"></a>
-    <a href="municipalities/brookline.html"><img class="task-force-member" src="images/reardon.jpg"></a>
-    <a href="municipalities/cambridge.html"><img class="task-force-member" src="images/reardon.jpg"></a>
-    <a href="municipalities/chelsea.html"><img class="task-force-member" src="images/reardon.jpg"></a>
-    <a href="municipalities/everett.html"><img class="task-force-member" src="images/reardon.jpg"></a>
-    <a href="municipalities/malden.html"><img class="task-force-member" src="images/reardon.jpg"></a>
+    <a href="municipalities/arlington.html"><img class="task-force-member" id="first-task-force-member" src="images/Arlington.png"></a>
+    <a href="municipalities/boston.html"><img class="task-force-member" src="images/Boston.png"></a>
+    <a href="municipalities/braintree.html"><img class="task-force-member" src="images/braintree.png"></a>
+    <a href="municipalities/brookline.html"><img class="task-force-member" src="images/brookline.png"></a>
+    <a href="municipalities/cambridge.html"><img class="task-force-member" src="images/cambridge.png"></a>
+    <a href="municipalities/chelsea.html"><img class="task-force-member" src="images/chelsea.png"></a>
+    <a href="municipalities/everett.html"><img class="task-force-member" src="images/everett.png"></a>
+    <a href="municipalities/malden.html"><img class="task-force-member" src="images/malden.png"></a>
     <a href="municipalities/medford.html"><img class="task-force-member" src="images/reardon.jpg"></a>
-    <a href="municipalities/melrose.html"><img class="task-force-member" src="images/reardon.jpg"></a>
-    <a href="municipalities/newton.html"><img class="task-force-member" src="images/reardon.jpg"></a>
-    <a href="municipalities/quincy.html"><img class="task-force-member" src="images/reardon.jpg"></a>
-    <a href="municipalities/revere.html"><img class="task-force-member" src="images/reardon.jpg"></a>
-    <a href="municipalities/somerville.html"><img class="task-force-member" src="images/reardon.jpg"></a>
+    <a href="municipalities/melrose.html"><img class="task-force-member" src="images/melrose.png"></a>
+    <a href="municipalities/newton.html"><img class="task-force-member" src="images/newton.png"></a>
+    <a href="municipalities/quincy.html"><img class="task-force-member" src="images/quincy.png"></a>
+    <a href="municipalities/revere.html"><img class="task-force-member" src="images/revere.png"></a>
+    <a href="municipalities/somerville.html"><img class="task-force-member" src="images/somerville.png"></a>
     <a href="municipalities/winthrop.html"><img class="task-force-member" src="images/reardon.jpg"></a>
   </div>
   <div class="task-force-text">
