--- a/municipalities/melrose.html
+++ b/municipalities/melrose.html
@@ -5,8 +5,8 @@ title: Melrose
 <h1>Melrose</h1>
 <div class="container">
   <figure>
-    <img class="mayor" src="{{ "/images/reardon.jpg" | relative_url }}">
-    <figcaption>Mayor Marty Walsh</figcaption>
+    <img class="mayor" src="{{ "/images/melrose.png" | relative_url }}">
+    <figcaption>Mayor Gail Infurna</figcaption>
   </figure>
   <p class="quote">"Housing is the future of our community."</p>
 </div>
