--- a/municipalities/arlington.html
+++ b/municipalities/arlington.html
@@ -5,8 +5,8 @@ title: Arlington
 <h1>Arlington</h1>
 <div class="container">
   <figure>
-    <img class="mayor" src="{{ "/images/reardon.jpg" | relative_url }}">
-    <figcaption>Mayor Marty Walsh</figcaption>
+    <img class="mayor" src="{{ "/images/arlington.png" | relative_url }}">
+    <figcaption></figcaption>
   </figure>
   <p class="quote">"Housing is the future of our community."</p>
 </div>
