--- a/municipalities/chelsea.html
+++ b/municipalities/chelsea.html
@@ -5,8 +5,8 @@ title: Chelsea
 <h1>Chelsea</h1>
 <div class="container">
   <figure>
-    <img class="mayor" src="{{ "/images/reardon.jpg" | relative_url }}">
-    <figcaption>Mayor Marty Walsh</figcaption>
+    <img class="mayor" src="{{ "/images/chelsea.png" | relative_url }}">
+    <figcaption></figcaption>
   </figure>
   <p class="quote">"Housing is the future of our community."</p>
 </div>
