--- a/municipalities/everett.html
+++ b/municipalities/everett.html
@@ -5,8 +5,8 @@ title: Everett
 <h1>Everett</h1>
 <div class="container">
   <figure>
-    <img class="mayor" src="{{ "/images/reardon.jpg" | relative_url }}">
-    <figcaption>Mayor Marty Walsh</figcaption>
+    <img class="mayor" src="{{ "/images/everett.png" | relative_url }}">
+    <figcaption>Mayor Carlo DeMaria, Jr.</figcaption>
   </figure>
   <p class="quote">"Housing is the future of our community."</p>
 </div>
