--- a/municipalities/malden.html
+++ b/municipalities/malden.html
@@ -5,8 +5,8 @@ title: Malden
 <h1>Malden</h1>
 <div class="container">
   <figure>
-    <img class="mayor" src="{{ "/images/reardon.jpg" | relative_url }}">
-    <figcaption>Mayor Marty Walsh</figcaption>
+    <img class="mayor" src="{{ "/images/malden.png" | relative_url }}">
+    <figcaption>Mayor Gary Christenson</figcaption>
   </figure>
   <p class="quote">"Housing is the future of our community."</p>
 </div>
