--- a/municipalities/quincy.html
+++ b/municipalities/quincy.html
@@ -5,8 +5,8 @@ title: Quincy
 <h1>Quincy</h1>
 <div class="container">
   <figure>
-    <img class="mayor" src="{{ "/images/reardon.jpg" | relative_url }}">
-    <figcaption>Mayor Marty Walsh</figcaption>
+    <img class="mayor" src="{{ "/images/quincy.png" | relative_url }}">
+    <figcaption></figcaption>
   </figure>
   <p class="quote">"Housing is the future of our community."</p>
 </div>
