--- a/municipalities/somerville.html
+++ b/municipalities/somerville.html
@@ -5,7 +5,7 @@ title: Somerville
 <h1>Somerville</h1>
 <div class="container">
   <figure>
-    <img class="mayor" src="{{ "/images/reardon.jpg" | relative_url }}">
+    <img class="mayor" src="{{ "/images/somerville.png" | relative_url }}">
     <figcaption>Mayor Marty Walsh</figcaption>
   </figure>
   <p class="quote">"Housing is the future of our community."</p>
