Update Best Practices CSS to Conform to Template
* Uppercase text
* Inverted button design
* Change stacking of best practices

--- a/best-practices.html
+++ b/best-practices.html
@@ -2,6 +2,6 @@
 layout: default
 title: Metro Mayor's Task Force on Housing Best Practices
 ---
-<h1>Best Practices</h1>
+<h1>Best Practices for Housing</h1>
 <div id="root"></div>
 <script type="text/javascript" src="assets/javascripts/bundle.js" charset="utf-8"></script>
