Resolve #18 Add Alt Text to Images
* Add alt text to front page images

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@ title: Metro Mayor's Task Force on Housing
 <main>
   <section class="task-force">
     <div class="task-force-members">
-      <a href="municipalities/arlington.html"><img class="task-force-member" id="first-task-force-member" src="images/Arlington.png"></a>
-      <a href="municipalities/boston.html"><img class="task-force-member" src="images/Boston.png"></a>
-      <a href="municipalities/braintree.html"><img class="task-force-member" src="images/braintree.png"></a>
-      <a href="municipalities/brookline.html"><img class="task-force-member" src="images/brookline.png"></a>
-      <a href="municipalities/cambridge.html"><img class="task-force-member" src="images/cambridge.png"></a>
-      <a href="municipalities/chelsea.html"><img class="task-force-member" src="images/chelsea.png"></a>
-      <a href="municipalities/everett.html"><img class="task-force-member" src="images/everett.png"></a>
-      <a href="municipalities/malden.html"><img class="task-force-member" src="images/malden.png"></a>
-      <a href="municipalities/medford.html"><img class="task-force-member" src="images/reardon.jpg"></a>
-      <a href="municipalities/melrose.html"><img class="task-force-member" src="images/melrose.png"></a>
-      <a href="municipalities/newton.html"><img class="task-force-member" src="images/newton.png"></a>
-      <a href="municipalities/quincy.html"><img class="task-force-member" src="images/quincy.png"></a>
-      <a href="municipalities/revere.html"><img class="task-force-member" src="images/revere.png"></a>
-      <a href="municipalities/somerville.html"><img class="task-force-member" src="images/somerville.png"></a>
-      <a href="municipalities/winthrop.html"><img class="task-force-member" src="images/reardon.jpg"></a>
+      <a href="municipalities/arlington.html"><img class="task-force-member" id="first-task-force-member" alt="Task force member from Arlington" src="images/Arlington.png"></a>
+      <a href="municipalities/boston.html"><img class="task-force-member" alt="Task force member from Boston" src="images/Boston.png"></a>
+      <a href="municipalities/braintree.html"><img class="task-force-member" alt="Task force member from Braintree" src="images/braintree.png"></a>
+      <a href="municipalities/brookline.html"><img class="task-force-member" alt="Task force member from Brookline" src="images/brookline.png"></a>
+      <a href="municipalities/cambridge.html"><img class="task-force-member" alt="Task force member from Cambridge" src="images/cambridge.png"></a>
+      <a href="municipalities/chelsea.html"><img class="task-force-member" alt="Task force member from Chelsea" src="images/chelsea.png"></a>
+      <a href="municipalities/everett.html"><img class="task-force-member" alt="Task force member from Everett" src="images/everett.png"></a>
+      <a href="municipalities/malden.html"><img class="task-force-member" alt="Task force member from Malden" src="images/malden.png"></a>
+      <a href="municipalities/medford.html"><img class="task-force-member" alt="Task force member from Medford" src="images/reardon.jpg"></a>
+      <a href="municipalities/melrose.html"><img class="task-force-member" alt="Task force member from Melrose" src="images/melrose.png"></a>
+      <a href="municipalities/newton.html"><img class="task-force-member" alt="Task force member from Newton" src="images/newton.png"></a>
+      <a href="municipalities/quincy.html"><img class="task-force-member" alt="Task force member from Quincy" src="images/quincy.png"></a>
+      <a href="municipalities/revere.html"><img class="task-force-member" alt="Task force member from Revere" src="images/revere.png"></a>
+      <a href="municipalities/somerville.html"><img class="task-force-member" alt="Task force member from Somerville" src="images/somerville.png"></a>
+      <a href="municipalities/winthrop.html"><img class="task-force-member" alt="Task force member from Winthrop" src="images/reardon.jpg"></a>
     </div>
     <h2 class="task-force-text">
       Meet the Mayors
@@ -69,24 +69,24 @@ title: Metro Mayor's Task Force on Housing
       <li><b>Fair Housing.</b> We are committed to abolishing discrimination against tenants and buyers, and advancing fair and equitable access to housing opportunity for everyone.</li>
     </ol>
 
-    <img class="signature" src="images/ambrosino-chelsea-01.svg">
-    <img class="signature" src="images/arrigo-revere-01.svg">
-    <img class="signature" src="images/burke-medford-01.svg">
-    <img class="signature" src="images/christenson-malden-01.svg">
-    <img class="signature" src="images/curatone-somerville-01.svg">
-    <img class="signature" src="images/demaria-everett-01.svg">
-    <img class="signature" src="images/depasquale-cambridge-01.svg">
-    <img class="signature" src="images/dolan-melrose-01.svg">
-    <img class="signature" src="images/kleckner-brookline-01.svg">
-    <img class="signature" src="images/koch-quincy-01.svg">
-    <img class="signature" src="images/mckenna-winthrop-01.svg">
-    <img class="signature" src="images/sullivan-braintree-01.svg">
-    <img class="signature" src="images/walsh-boston-01.svg">
-    <img class="signature" src="images/warren-newton-01.svg">
+    <img class="signature" alt="Signature of task force member from Chelsea" src="images/ambrosino-chelsea-01.svg">
+    <img class="signature" alt="Signature of task force member from Revere" src="images/arrigo-revere-01.svg">
+    <img class="signature" alt="Signature of task force member from Medford" src="images/burke-medford-01.svg">
+    <img class="signature" alt="Signature of task force member from Malden" src="images/christenson-malden-01.svg">
+    <img class="signature" alt="Signature of task force member from Somerville" src="images/curatone-somerville-01.svg">
+    <img class="signature" alt="Signature of task force member from Everett" src="images/demaria-everett-01.svg">
+    <img class="signature" alt="Signature of task force member from Cambridge" src="images/depasquale-cambridge-01.svg">
+    <img class="signature" alt="Signature of task force member from Melrose" src="images/dolan-melrose-01.svg">
+    <img class="signature" alt="Signature of task force member from Brookline" src="images/kleckner-brookline-01.svg">
+    <img class="signature" alt="Signature of task force member from Quincy" src="images/koch-quincy-01.svg">
+    <img class="signature" alt="Signature of task force member from Winthrop" src="images/mckenna-winthrop-01.svg">
+    <img class="signature" alt="Signature of task force member from Braintree" src="images/sullivan-braintree-01.svg">
+    <img class="signature" alt="Signature of task force member from Boston" src="images/walsh-boston-01.svg">
+    <img class="signature" alt="Signature of task force member from Newton" src="images/warren-newton-01.svg">
 
     <a href="slide-show.html">
       <div id="housing">
-        <img src="images/housing-house.svg">
+        <img alt="A house" src="images/housing-house.svg">
         <h3>Housing Our Region</h3>
         <span>Explore the Issue ></span>
       </div>
@@ -94,7 +94,7 @@ title: Metro Mayor's Task Force on Housing
 
     <a href="best-practices.html">
       <div id="best-practices">
-        <img src="images/best-practices-house.svg">
+        <img alt="A house" src="images/best-practices-house.svg">
         <h3>Best Practices</h3>
         <span>Explore Tools ></span>
       </div>
