Fix Image Mapping
This changes the image links to link to the correct images.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ title: Metro Mayor's Task Force on Housing
       <a href="municipalities/brookline.html"><img class="task-force-member" alt="Task force member from Brookline" src="images/brookline.png"></a>
       <a href="municipalities/cambridge.html"><img class="task-force-member" alt="Task force member from Cambridge" src="images/cambridge.png"></a>
       <a href="municipalities/chelsea.html"><img class="task-force-member" alt="Task force member from Chelsea" src="images/chelsea.png"></a>
-      <a href="municipalities/everett.html"><img class="task-force-member" alt="Task force member from Everett" src="images/everett.png"></a>
-      <a href="municipalities/malden.html"><img class="task-force-member" alt="Task force member from Malden" src="images/malden.png"></a>
+      <a href="municipalities/everett.html"><img class="task-force-member" alt="Task force member from Everett" src="images/Everett.png"></a>
+      <a href="municipalities/malden.html"><img class="task-force-member" alt="Task force member from Malden" src="images/Malden.png"></a>
       <a href="municipalities/medford.html"><img class="task-force-member" alt="Task force member from Medford" src="images/reardon.jpg"></a>
       <a href="municipalities/melrose.html"><img class="task-force-member" alt="Task force member from Melrose" src="images/melrose.png"></a>
       <a href="municipalities/newton.html"><img class="task-force-member" alt="Task force member from Newton" src="images/newton.png"></a>
